@@ -8,3 +8,4 @@
    literalblock
    definition_terms
    figure_caption
+   index_entries
